syntax = "proto3";

package pb;

option go_package = "./";

// protoc --go_out=./pb --go-grpc_out=./pb account.proto

message Account {
  string id = 1;
  string name = 2;
}

message CreateAccountRequest { string name = 1; }

message CreateAccountResponse { Account account = 1; }

message GetAccountByIdRequest { string id = 1; }

message GetAccountByIdResponse { Account account = 1; }

message GetAccountsRequest {
  uint64 skip = 1;
  uint64 take = 2;
}

message GetAccountsResponse { repeated Account accounts = 1; }

service AccountService {

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {};
  rpc GetAccountById(GetAccountByIdRequest) returns (GetAccountByIdResponse) {};
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {};
}